maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:22: error: not found: value x
  x = 0
  ^JediEscaper:23: error: not found: value y
  y = 0
  ^JediEscaper:24: error: not found: value x
  while (!aBiscuit(x,y)) {if (x!=getMondeLargeur()) {x=x+1} else {x=0;y=y+1}}
                   ^JediEscaper:24: error: not found: value y
  while (!aBiscuit(x,y)) {if (x!=getMondeLargeur()) {x=x+1} else {x=0;y=y+1}}
                     ^JediEscaper:24: error: not found: value x
  while (!aBiscuit(x,y)) {if (x!=getMondeLargeur()) {x=x+1} else {x=0;y=y+1}}
                              ^JediEscaper:24: error: not found: value x
  while (!aBiscuit(x,y)) {if (x!=getMondeLargeur()) {x=x+1} else {x=0;y=y+1}}
                                                     ^JediEscaper:24: error: not found: value x
  while (!aBiscuit(x,y)) {if (x!=getMondeLargeur()) {x=x+1} else {x=0;y=y+1}}
                                                                  ^JediEscaper:24: error: not found: value y
  while (!aBiscuit(x,y)) {if (x!=getMondeLargeur()) {x=x+1} else {x=0;y=y+1}}
                                                                      ^JediEscaper:25: error: not found: value a
  a=x
  ^JediEscaper:26: error: not found: value b
  b=y
  ^JediEscaper:27: error: not found: value a
  setIndication(a,b,0)
                ^JediEscaper:27: error: not found: value b
  setIndication(a,b,0)
                  ^JediEscaper:28: error: not found: value a
  casP(a,b,0)
       ^JediEscaper:28: error: not found: value b
  casP(a,b,0)
         ^